fix: remove useless gap

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -18,11 +18,7 @@ window#waybar {
 #custom-lower-right {
 	color: #252423;
 	font-size: 28px;
-	border-bottom: 3px solid #3C3836;
-}
-
-#custom-gap {
-	color: transparent;
+	/* border-bottom: 3px solid #3C3836; */
 }
 
 #user,
